src/pages/Greeting/style.css
@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');

.greetingWrapper {
    display: grid;
    place-items: center;
    padding-top: 150px;
}

.greetBtn {
    font-weight: 400 !important;
    font-family: 'Poppins', sans-serif !important;
    margin-top: 100px !important;
}

.greetingWrapper h1, h2 {
    font-family: "Permanent Marker", cursive !important;
    font-weight: 400;
    font-style: normal;
    color: #1C1C1C;
    text-align: center;
}

.greetingWrapper > h1 {
    font-weight: 800;
}

